--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "bootstrap-icons": "1.13.1",
+    "react-router-dom": "7.6.2",
+    "react-bootstrap": "2.10.10",
+    "bootstrap": "5.3.6"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
@@ -21,5 +25,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
