--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
+    "bootstrap": "5.3.6",
     "bootstrap-icons": "1.13.1",
-    "react-router-dom": "7.6.2",
+    "react": "^19.0.0",
     "react-bootstrap": "2.10.10",
-    "bootstrap": "5.3.6"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "7.6.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
